Remove deprecated new Long(), Double and Character calls